assets/css/style.css
/* Google Fonts Import */
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap");

/* Override default styles */
* {
  margin: 0px;
  padding: 0px;
  border: 0px;
}

/*genral styles */
body {
  font-family: Lato, sans-serif;
  font-weight: 800;
  color: grey;
}

.gen-text {
  font-family: Lato, sans-serif;
  font-size: 12px;
  color: rgb(81, 81, 81);
  padding: 25px;
}


.section-image {
  width: 100%;
  padding-bottom: 10px;
  padding-top: 10px;
}



/* text */
.cc-title-txt {
  font-family: Oswald, sans-serif;
  text-transform: uppercase;
  font-weight: 800;
  color: grey;
}

.main-nav {
  display: flex;
  justify-content: space-between;
}

.edudisclaimer {
  width: 25%;
  height: 15%;
  text-align: right;
  padding: 2.5px;
}

/* hero section  */

.hero-container {
  position: relative;
  background: url("../images/heroimghome.png") center/cover no-repeat;
  height: 80vh;
}

.hero-content {
  position: absolute;
  bottom: 0;
  z-index: 99;
  display: flex;
  justify-content: center;
  width: 100%;
  margin-bottom: 10vh;
}

/* Buttons  */

cta-news-button {
  padding: 10px;
  justify-content: center;
  border-radius: 5px;
  color: transparent;
}

/* Footer */

.main-footer {
  background-color: rgba(62, 62, 62, 0.842);
  color: rgb(231, 231, 231);
  position: absolute;
  bottom: 1;
  width: 100%;
}

footer p {
  font-size: xx-small;
  font-family: Lato, sans-serif;
  color: rgb(231, 231, 231);
  text-align: center;
}

footer h6 {
  font-size: small;
  font-family: Lato, sans-serif;
  color: rgb(231, 231, 231);
  text-align: center;
  text-transform: capitalize;
}

/* imgs */

.container {
  display: flex;
  border: 1px solid black;
  padding: 20px;
  width: 80vw;
  justify-content: space-between;
}

.storytitle {
  text-align: center;
  text-transform: capitalize;
}

.item {
  /* width: 300px;
  height: 200px; */
  position: relative;
}

.overlay-container {
  position: absolute;
  color: white;
  background-color: black;
  top: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  opacity: 0;
}

.overlay-container:hover {
  opacity: 60%;
}

.storysection {
  padding: 2.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.storytitle {
  text-align: center;
  text-transform: capitalize;
}

.section-image {
  width: 100%;
  padding: 0px;
}

.gen-text {
  font-family: Lato, sans-serif;
  font-size: 12px;
  color: rgb(81, 81, 81);
  padding: 25px;
}

